--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://git.bitrain.co/christianrank/eslint-config-christianrank.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
     "eslint": "^3.0.0",
     "eslint-plugin-react": "^6.0.0"
