--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-christianrank",
   "version": "1.0.3",
-  "description": "",
+  "description": "The eslint config I'm using in my projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
