--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.bitrain.co/christianrank/eslint-config-christianrank.git"
+    "url": "https://github.com/christianrank/eslint-config-christianrank.git"
   },
   "author": "",
   "license": "MIT",
