--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-christianrank",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "The eslint config I'm using in my projects",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,11 @@
   },
   "author": "",
   "license": "MIT",
-  "peerDependencies": {
+  "devDependencies": {
     "eslint": "^3.0.0",
-    "eslint-plugin-react": "^6.0.0"
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.6.0"
   }
 }
